[tool]
[tool.poetry]
name = "bacalhau-sdk"
version = "0.1.6"
homepage = "https://github.com/bacalhau-project/bacalhau/"
repository = "https://github.com/bacalhau-project/bacalhau/"
documentation = "https://docs.bacalhau.org/"
keywords = ["bacalhau", "Filecoin", "IPFS", "cod", "compute over data", "verifiable computation"]
description = "Compute over Data framework for public, transparent, and optionally verifiable computation using IPFS & Filecoin."
authors = ["Enrico Rotundo <team@bacalhau.org>"]
readme = "README.md"
license =  "Apache-2.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "bacalhau_sdk" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

black  = { version = "^22.12.0", optional = true}
isort  = { version = "^5.8.0", optional = true}
flake8  = { version = "^6.0.0", optional = true}
mypy = {version = "^0.991", optional = true}
tox  = { version = "^4.2.6", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^22.3.1", optional = true}
twine  = { version = "^4.0.2", optional = true}
pre-commit = {version = "^2.12.0", optional = true}
toml = {version = "^0.10.2", optional = true}
pem = "^21.2.0"
pycryptodome = "^3.16.0"
cryptography = "^39.0.1"
six = "^1.16.0"
types-six = "^1.16.21.4"
bacalhau-apiclient = "0.3.23.post8"

[tool.poetry.extras]


[tool.poetry.group.dev.dependencies]
tox = "^4.2.6"
pre-commit = "^2.21.0"
virtualenv = "^20.17.1"
pip = "^22.3.1"
twine = "^4.0.2"
toml = "^0.10.2"
bump2version = "^1.0.1"


[tool.poetry.group.test.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
pytest-cov = "^4.0.0"
pytest = "^7.2.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bacalhau-project/bacalhau/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
