[tool.poetry]
name = "gps-substitution"
version = "0.1.0"
description = ""
authors = ["David Aronchick <david.aronchick@protocol.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
pandas = "^1.4.1"
scipy = {version = "^1.8.0", python = ">=3.9,<3.11"}
ipython = "^8.1.1"
pyinstrument = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
