[package]
name = "python-executor"
version = "0.1.0"
edition = "2021"


[dependencies]
bollard = "0.15.0"
prost = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.10.1"
tonic-reflection = "0.10.1"

[build-dependencies]
tonic-build = "0.10.1"
