[tool.poetry]
name = "issue_handler"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
python-dotenv = "^0.21.0"
gql = "^3.4.0"
aiohttp = "^3.8.3"
pydantic = "^1.10.2"
furl = "^2.1.3"
sgqlc = "^16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
